--- a/app.json
+++ b/app.json
@@ -7,6 +7,8 @@
     "pages/search/search",
     "pages/city/city",
     "pages/feedback/feedback",
+    "pages/poi_detail/poi_detail",
+    "pages/productList/productList",
     "pages/logs/logs"
   ],
   "window":{
@@ -46,5 +48,10 @@
     "selectedColor": "#3C3C3C",
     "backgroundColor": "#F8F8F8",
     "borderStyle": "white"
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
   }
 }
