--- a/app.json
+++ b/app.json
@@ -5,10 +5,12 @@
     "pages/shoppingCart/shoppingCart",
     "pages/my/my",
     "pages/search/search",
+    "pages/searchList/searchList",
     "pages/city/city",
     "pages/feedback/feedback",
     "pages/poi_detail/poi_detail",
     "pages/productList/productList",
+    "pages/progList/progList",
     "pages/goodItemDetail/goodItemDetail",
     "pages/order/order",
     "pages/couponDetail/couponDetail",
