登录、收藏、优惠券
1、优惠券详情页面根据来源调用不同接口
2、完成登录功能
3、完成收藏功能

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
     "pages/collection/collection",
     "pages/myOrder/myOrder",
     "pages/about/about",
-    "pages/help/help"
+    "pages/help/help",
+    "pages/signIn/signIn"
   ],
   "window":{
     "backgroundTextStyle":"light",
