--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -45,6 +45,13 @@
 					"pathName": "pages/order/order",
 					"query": "giid=2eeb67f8-1739-4a53-96bc-efaed7c8821d&type=1",
 					"scene": 1001
+				},
+				{
+					"id": -1,
+					"name": "pay",
+					"pathName": "pages/pay/pay",
+					"query": "orderId=dd4c1032586c44b993bf12c4072be685&orderNo=7786598053894410240&currency=CNY&type=1",
+					"scene": null
 				}
 			]
 		}
