--- a/app.json
+++ b/app.json
@@ -25,7 +25,9 @@
     "pages/about/about",
     "pages/help/help",
     "pages/signIn/signIn",
-    "pages/pay/pay"
+    "pages/pay/pay",
+    "pages/childProductList/childProductList",
+    "pages/morecomment/morecomment"
   ],
   "window":{
     "backgroundTextStyle":"light",
