接口联调和样式开发

--- a/app.json
+++ b/app.json
@@ -37,6 +37,7 @@
     "pages/lineUp/lineUp",
     "pages/lineUpConfirm/lineUpConfirm",
     "pages/fooddetail/fooddetail",
+    "pages/foodsetdetail/foodsetdetail",
     "pages/foodMeal/foodMeal",
     "pages/foodchoose/foodchoose",
     "pages/refund/refund"
