--- a/app.json
+++ b/app.json
@@ -41,6 +41,7 @@
     "pages/foodsetdetail/foodsetdetail",
     "pages/foodMeal/foodMeal",
     "pages/foodchoose/foodchoose",
+    "pages/foodorder/foodorder",
     "pages/refund/refund"
   ],
   "window":{
