新增页面及接口联调
新增确认点菜页面，点菜成功等页面的开发及接口联调！
完成点菜页面和全部订单页面接口联调及样式调整！

--- a/app.json
+++ b/app.json
@@ -42,6 +42,8 @@
     "pages/foodMeal/foodMeal",
     "pages/foodchoose/foodchoose",
     "pages/foodorder/foodorder",
+    "pages/foodsure/foodsure",
+    "pages/foodpayresult/foodpayresult",
     "pages/refund/refund"
   ],
   "window":{
