--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 12,
+			"current": 13,
 			"list": [
 				{
 					"id": 0,
@@ -125,9 +125,16 @@
 				},
 				{
 					"id": -1,
-					"name": "确认点菜",
-					"pathName": "pages/foodsure/foodsure",
-					"query": "mid=643469ba-7bed-45b5-aeb7-455ec1499e70&foodOrderId=d404aca2-b4cc-42ee-9904-3c1051cc0607&sn=6399d76468a04e078d3c40a8107d48b6",
+					"name": "编辑账户",
+					"pathName": "pages/editAccount/editAccount",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "修改手机或者邮箱",
+					"pathName": "pages/bindPhoneEmail/bindPhoneEmail",
+					"query": "",
 					"scene": null
 				}
 			]
