--- a/app.json
+++ b/app.json
@@ -47,7 +47,8 @@
     "pages/foodsure/foodsure",
     "pages/foodpayresult/foodpayresult",
     "pages/orderMealDetail/orderMealDetail",
-    "pages/refund/refund"
+    "pages/refund/refund",
+    "pages/comment/comment"
   ],
   "window":{
     "backgroundTextStyle":"light",
