--- a/project.config.json
+++ b/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 17,
 			"list": [
 				{
 					"id": 0,
@@ -160,24 +160,10 @@
 					"scene": null
 				},
 				{
-					"id": -1,
-					"name": "关于",
-					"pathName": "pages/about/about",
-					"query": "",
-					"scene": null
-				},
-				{
-					"id": -1,
-					"name": "核销页面",
-					"pathName": "pages/ticket/ticket",
-					"query": "orderId=a97da913e1f843a99b2ea9934a45497e&merchId=bc007b71-75a4-47f3-a2d5-5d9604015ebe",
-					"scene": null
-				},
-				{
-					"id": 19,
-					"name": "点菜选择用餐人数",
-					"pathName": "pages/chooseFoodNumber/chooseFoodNumber",
-					"query": "foodOrderId=57fac2a3-024f-42e2-bf7d-2c74d3dd962b",
+					"id": 17,
+					"name": "放题或者套餐详情页面",
+					"pathName": "pages/foodItems/foodItems",
+					"query": "foodId=2daad307-3c9f-4869-90d2-87d40cc90597&personNum=10&type=3&foodNum=1",
 					"scene": null
 				}
 			]
