--- a/app.json
+++ b/app.json
@@ -57,7 +57,8 @@
     "pages/chooseFoodNumber/chooseFoodNumber",
     "pages/foodItems/foodItems",
     "pages/foodorderconfirm/foodorderconfirm",
-    "pages/foodadd/foodadd"
+    "pages/foodadd/foodadd",
+    "pages/orderDishesDetail/orderDishesDetail"
   ],
   "window":{
     "backgroundTextStyle":"light",
