--- a/project.config.json
+++ b/project.config.json
@@ -38,7 +38,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 18,
+			"current": 19,
 			"list": [
 				{
 					"id": 0,
@@ -111,10 +111,10 @@
 					"scene": null
 				},
 				{
-					"id": 11,
+					"id": 10,
 					"name": "点菜",
 					"pathName": "pages/foodorder/foodorder",
-					"query": "sn=f6869ec232bc40d8933f45cc34e7fd67",
+					"query": "mid=9d8d5e7e-1155-4bcf-b8a6-b3ec079d7ef2&tno=001",
 					"scene": null
 				},
 				{
@@ -171,6 +171,13 @@
 					"name": "核销页面",
 					"pathName": "pages/ticket/ticket",
 					"query": "orderId=a97da913e1f843a99b2ea9934a45497e&merchId=bc007b71-75a4-47f3-a2d5-5d9604015ebe",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "加菜",
+					"pathName": "pages/foodorder/foodorder",
+					"query": "mid=9d8d5e7e-1155-4bcf-b8a6-b3ec079d7ef2&tno=001&toPage=foodadd",
 					"scene": null
 				}
 			]
